@@ -97,6 +97,7 @@ Bug Fixes:
   segmentation faults due to stack overflow in C code
 - PR#5211: updated Genlex documentation to state that camlp4 is mandatory for
   'parser' keyword and associated notation
+- PR#5224: confusing error message in non-regular type definition
 - PR#5238, PR#5277: Sys_error when getting error location
 - PR#5291: undetected loop in class initialization
 - PR#5295: OS threads: problem with caml_c_thread_unregister()
